<resources>
    <string name="app_name">LBS</string>

    <string name="name">Name</string>
    <string name="vname">Vendor Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password1">Password again</string>
    <string name="city">City</string>
    <string name="dob">Date of Birth</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="ulogin">User Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="username">Username</string>
    <string name="shopname">Shop Name</string>
    <string name="shopaddress">Shop Address </string>
    <string name="status">Status</string>
    <string name="updateshop">Update Shop</string>
    <string name="addshop">Add Shop</string>
    <string name="alreadyuser"><u>Already user? Click here</u></string>
    <string name="newuser"><u>New user? Click here</u></string>
    <string name="vendorlogin"><u>Vendor login</u></string>
    <string name="vendorlogin1">Vendor login</string>
    <string name="userlogin"><u>User login? Click here</u></string>

    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="category">Category</string>
    <string name="discounttype">Discount Type</string>
    <string name="discount">Price/Discount</string>
    <string name="couponcode">Coupon Code</string>
    <string name="color">Color Setting</string>
    <string name="link">Link</string>
    <string name="offerimage">Offer Image</string>
    <string name="offerstart">Offer Starts From</string>
    <string name="offerexpires">Offer Expires On</string>
    <string name="priority">Priority</string>
    <string name="updateoffer">Update Offer</string>
    <string name="addoffer">Add Offer</string>

    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="favshops">My Fav Shops</string>
    <string name="favcat">My Fav Categories</string>
    <string name="profile">My Profile</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <string name="key">lbs#123</string>
    <string name="dashboard">Dashboard</string>
    <string name="manageshops">Manage Shops</string>
    <string name="manageoffers">Manage Offers</string>
    <string name="offercoupons">Manage Offer Coupons</string>
    <string name="analytics">Analytics</string>
    <string name="qrcode">QR Code</string>

    <string name="baseURL">http://192.168.1.100/lbs/</string>
    <string name="registerAPI">register.php</string>
    <string name="loginAPI">login.php</string>
    <string name="vloginAPI">vlogin.php</string>
    <string name="vregisterAPI">vregister.php</string>
    <string name="updateUserDetailsAPI">updateUserDetails.php</string>
    <string name="shopsAPI">getShops.php</string>
    <string name="getFavShops">getFavShops.php</string>
    <string name="getOffersAPI">getOffers.php</string>
    <string name="getCatOffersAPI">getCatOffers.php</string>
    <string name="changePassAPI">changePass.php</string>
    <string name="getUserDetailsAPI">getUserDetails.php</string>
    <string name="shopactiveAPI">showActive.php</string>
    <string name="offeractiveAPI">offerActive.php</string>
    <string name="addClicksAPI">addClicks.php</string>
    <string name="addFavAPI">addFavourites.php</string>
    <string name="getDashboardAPI">getDashboard.php</string>
    <string name="getFavAPI">getFav.php</string>
    <string name="removeFavAPI">removeFav.php</string>
    <string name="addShopAPI">addShop.php</string>
    <string name="addOfferAPI">addOffer.php</string>
    <string name="updateOfferAPI">updateOffer.php</string>
    <string name="updateShopAPI">updateShop.php</string>
    <string name="getDataAPI">getData.php</string>
    <string name="viewqr">View QR Code</string>
    <string name="selectshop">Select Shop</string>
    <string name="selectoffer">Select Offer</string>
    <string name="tryagain">Try Again</string>
    <string name="clickon">Click on QR Code icon to get your coupon!</string>
    <string name="offervalidity">Offer Validity</string>
    <string name="offers">Offers</string>
    <string name="save">Save</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="updatepassword">Update Password</string>
    <string name="myfavshops">My Favourite Shops</string>
    <string name="getShopOffersAPI">getShopOffers.php</string>
</resources>
