<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:title="@string/home" />
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:title="@string/profile" />
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/favshops"
            android:checked="false"
            android:title="@string/favshops" />
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:title="@string/logout" />
    </group>
</menu>