<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard"
            android:checked="false"
            android:title="@string/dashboard" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/manageshops"
            android:checked="false"
            android:title="@string/manageshops" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/manageoffers"
            android:checked="false"
            android:title="@string/manageoffers" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:title="@string/logout" />
    </group>

</menu>