<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_actionbar"
                style="@style/ToolBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="@dimen/abc_action_bar_default_height_material" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:clipToPadding="true"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
                    android:hint="@string/title"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
                    android:hint="@string/desc"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="7dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/shopname"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spShop"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/spinner_background"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:spinnerMode="dialog" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spCategory"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/spinner_background"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:spinnerMode="dialog" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/discounttype"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spDiscountType"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/spinner_background"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/etDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="1234567890"
                    android:hint="@string/discount"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/etCouponCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:hint="@string/couponcode"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/color"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spColor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/spinner_background"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/etLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890:/."
                    android:hint="@string/link"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/etOfferStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/offerstart"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:longClickable="false"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/etOfferExpire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/offerexpires"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:longClickable="false"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/priority"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spPriority"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/spinner_background"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:spinnerMode="dialog" />

                <Button
                    android:id="@+id/btnOfferImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/offerimage"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbActive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="Active" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbDeactive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="Deactive" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.50"
                        android:layout_margin="10dp"
                        android:background="@drawable/style_border_button"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/reset"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.50"
                        android:text="@string/addoffer"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:textAllCaps="false" />
                </LinearLayout>
                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.50"
                    android:text="@string/updateoffer"
                    android:visibility="gone"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textAllCaps="false" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>