<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_actionbar"
                style="@style/ToolBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="@dimen/abc_action_bar_default_height_material" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:clipToPadding="true"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/profile"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:hint="@string/vname"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/etPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:hint="@string/password1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@._"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="1234567890"
                    android:hint="@string/mobileno"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="7dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="0.50"
                        android:background="@drawable/style_border_button"
                        android:text="@string/reset"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="0.50"
                        android:background="@color/colorPrimary"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAlreadyUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/alreadyuser"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>