<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_actionbar"
                style="@style/ToolBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="@dimen/abc_action_bar_default_height_material" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:clipToPadding="true"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etShopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-., "
                    android:hint="@string/shopname"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/etShopAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-., "
                    android:hint="@string/shopaddress"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/etShopMobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_round_edittext"
                    android:digits="1234567890"
                    android:hint="@string/mobileno"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbActive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="Active" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbDeactive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="Deactive" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="0.50"
                        android:background="@drawable/style_border_button"
                        android:text="@string/reset"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="0.50"
                        android:background="@color/colorPrimary"
                        android:text="@string/addshop"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/updateshop"
                    android:textAllCaps="false"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>